# codlet

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
crates/codlet/: Cargo.toml  README.md
crates/codlet-conformance/: Cargo.toml
crates/codlet-conformance/src/: code.rs  fixtures.rs  lib.rs  session.rs  token.rs
crates/codlet-conformance/tests/: mem_conformance.rs
crates/codlet-core/: Cargo.toml  README.md
crates/codlet-core/src/: cookie.rs  error.rs  hashing.rs  lib.rs  metrics.rs  rng.rs  secret.rs
crates/codlet-core/src/auth/: code.rs  mod.rs  norate.rs  session.rs  token.rs
crates/codlet-core/src/code/: alphabet.rs  generate.rs  mod.rs  normalize.rs  policy.rs
crates/codlet-core/src/mem/: code.rs  mod.rs  token.rs
crates/codlet-core/src/state/: claim.rs  mod.rs  token.rs
crates/codlet-core/src/store/: code.rs  mod.rs  ratelimit.rs  session.rs  token.rs
crates/codlet-core/tests/: rfc_003_004_acceptance.rs  rfc_005_006_007_011_acceptance.rs  rfc_008_012_acceptance.rs  rfc_009_compile.rs  rfc_013_acceptance.rs
crates/codlet-examples/: Cargo.toml
crates/codlet-examples/src/: lib.rs
crates/codlet-sqlx/: Cargo.toml  README.md
crates/codlet-sqlx/migrations/: 0002_postgres.sql
crates/codlet-sqlx/src/: admin.rs  code.rs  lib.rs  migration.rs  postgres.rs  session.rs  token.rs
crates/codlet-sqlx/src/postgres/: code.rs  mod.rs  session.rs  token.rs
crates/codlet-sqlx/tests/: conformance.rs
crates/codlet-worker/: Cargo.toml  README.md
crates/codlet-worker/migrations/: 0001_initial.sql
crates/codlet-worker/src/: http.rs  key_provider.rs  lib.rs  migration.rs  table_config.rs
crates/codlet-worker/src/d1/: code.rs  mod.rs  session.rs  token.rs
crates/codlet-worker/src/http/: cookies.rs  identity.rs
crates/codlet-worker/src/kv/: mod.rs  rate_limit.rs
crates/codlet-worker/tests/: conformance.test.ts  package-lock.json  package.json  worker.js  wrangler.toml
crates/codlet/src/: admin.rs  audit.rs  clock.rs  cookie.rs  error.rs  hashing.rs  lib.rs  metrics.rs  rng.rs  secret.rs  store.rs
crates/codlet/src/admin/: tests.rs
crates/codlet/src/audit/: tests.rs
crates/codlet/src/auth/: error.rs  session.rs  token.rs
crates/codlet/src/clock/: tests.rs
crates/codlet/src/code/: alphabet.rs  generate.rs  normalize.rs  policy.rs
crates/codlet/src/code/alphabet/: tests.rs
crates/codlet/src/code/generate/: tests.rs
crates/codlet/src/code/normalize/: tests.rs
crates/codlet/src/code/policy/: tests.rs
crates/codlet/src/cookie/: tests.rs
crates/codlet/src/hashing/: tests.rs
crates/codlet/src/mem/: code.rs  mod.rs  ratelimit.rs  session.rs  token.rs
crates/codlet/src/metrics/: tests.rs
crates/codlet/src/rng/: tests.rs
crates/codlet/src/secret/: tests.rs
crates/codlet/src/state/: claim.rs  session.rs  token.rs
crates/codlet/src/state/claim/: tests.rs
crates/codlet/src/state/session/: tests.rs
crates/codlet/src/state/token/: tests.rs
crates/codlet/src/store/: code.rs  error.rs  ratelimit.rs
crates/codlet/src/store/code/: tests.rs
crates/codlet/src/store/ratelimit/: tests.rs
crates/codlet/tests/: rfc_003_004_acceptance.rs  rfc_005_006_007_011_acceptance.rs  rfc_005_acceptance.rs  rfc_006_acceptance.rs  rfc_007_acceptance.rs  rfc_008_012_acceptance.rs  rfc_009_compile.rs  rfc_013_acceptance.rs  rfc_security_acceptance.rs
docs/src/: SUMMARY.md  adapter-matrix-and-config.md  introduction.md  key-rotation.md  migration-from-an-existing-service.md  migration-from-zinnias-ciao.md  rfc-process.md  threat-model.md
examples/: README.md
examples/axum_login_logout/: Cargo.toml
examples/axum_login_logout/src/: main.rs
examples/form_token_csrf/: Cargo.toml
examples/form_token_csrf/src/: main.rs
examples/key_rotation/: Cargo.toml
examples/key_rotation/src/: main.rs
examples/sqlite_file/: Cargo.toml
examples/sqlite_file/src/: main.rs
examples/sqlite_quickstart/: Cargo.toml
examples/sqlite_quickstart/src/: main.rs
rfcs/: README.md
rfcs/archive/: RFC-018-future-server---idp-crate-strategy.md
rfcs/done/: RFC-001-project-scope-product-shape-non-goals.md  RFC-002-crate-architecture-feature-flags-runtime-matrix.md  RFC-003-one-time-code-policy-generation-normalization-validation.md  RFC-004-secret-hashing-key-providers-domain-separation-key-versioning.md  RFC-005-code-lifecycle-storage-contract-atomic-redemption.md  RFC-006-session-issuance-validation-revocation-cookie-policy.md  RFC-007-form-tokens-csrf-protection-idempotency-replay.md  RFC-008-rate-limiting-abuse-resistance.md  RFC-009-async-trait-strategy-runtime-matrix-adapter-contracts.md  RFC-010-cloudflare-workers-d1-kv-adapter.md  RFC-011-sqlx-in-memory-adapters.md  RFC-012-error-model-privacy-audit-events.md  RFC-013-high-level-orchestration-api-host-application-boundary.md  RFC-014-zinnias-ciao-migration-compatibility-plan.md  RFC-015-test-strategy-fuzzing-release-gates-security-regression-tests.md  RFC-016-documentation-examples-non-technical-ux-guidance.md  RFC-017-security-operations-key-management-rotation.md  RFC-019-typestate-api-and-opaque-newtypes.md  RFC-020-randomness-clock-and-deterministic-testing.md  RFC-021-error-taxonomy-and-user-facing-copy-contract.md  RFC-022-database-atomicity-isolation-and-race-semantics.md  RFC-023-adapter-conformance-test-suite.md  RFC-024-observability-metrics-and-redaction.md  RFC-025-audit-sink-and-security-event-vocabulary.md  RFC-026-examples-and-reference-applications.md  RFC-027-runtime-portability-wasm-and-send-strategy.md  RFC-028-security-policy-advisory-process-msrv-and-release-discipline.md  RFC-029-idempotency-result-persistence.md  RFC-030-administrative-code-management-api.md  RFC-031-key-rotation-grace-period-and-retirement.md  RFC-032-code-delivery-channel-boundary.md  RFC-033-cloudflare-workers-d1-kv-adapter-implementation.md  RFC-034-postgresql-adapter-implementation.md
rfcs/proposed/: RFC-007-form-tokens-csrf-protection-idempotency-replay.md  (+29 more)
xtask/: Cargo.toml
xtask/src/: main.rs
