[workspace]
resolver = "2"
members = [
    "crates/codlet-core",
    "crates/codlet-conformance",
    "crates/codlet-sqlx",
    "crates/codlet-worker",
    "crates/codlet-examples",
    "xtask",
]

[workspace.package]
version    = "0.15.2"
edition    = "2024"
rust-version = "1.85"
license    = "Apache-2.0"
authors    = ["nabbisen"]
repository = "https://github.com/nabbisen/codlet"
description = "Embedded one-time-code authentication primitives for Rust web services."

# Candidate core dependencies (RFC-002 §4, RFC-NFR-3). Pinned here so every
# crate shares one version. Adapters add their own platform deps in their own
# manifests; none of these are web-framework, database, or async-executor crates.
[workspace.dependencies]
codlet-core = { version = "0.15.2", path = "crates/codlet-core" }
codlet-sqlx = { version = "0.15.2", path = "crates/codlet-sqlx" }

worker      = { version = "0.8" }
worker-kv   = { version = "0.9" }

sqlx    = { version = "0.9", default-features = false }
tokio   = { version = "1" }

hmac      = { version = "0.13" }
sha2      = { version = "0.11" }
subtle    = { version = "2" }
# getrandom: the `js` feature is required on wasm32-unknown-unknown (Workers
# target) to route through wasm-bindgen's crypto API.  It must NOT be enabled
# on native targets — it adds wasm-bindgen glue that has no effect but
# increases binary size.  Per-target activation is done in codlet-core's
# Cargo.toml, not here.
getrandom = { version = "0.4" }
thiserror = { version = "2" }
serde      = { version = "1", features = ["derive"] }
serde_json = { version = "1" }

[profile.release]
opt-level = "s"   # smaller artifacts; adapters targeting WASM benefit

# Shared lint policy. forbid(unsafe_code) is also asserted in each crate root
# (implementation handoff §5) so it is visible at the top of the source file.
[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

