[package]
name = "xtask"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish = false
description = "Workspace automation: release-gate static checks for codlet (RFC-015)."

[lints]
workspace = true

[dependencies]
