[package]
name = "xtask"
description = "Workspace automation: release-gate static checks for codlet (RFC-015)."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
publish = false

[lints]
workspace = true

[dependencies]
