[package]
name = "codlet-conformance"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Adapter conformance test suite for codlet store implementations (RFC-023)."
publish = false  # test/dev tool; not published to crates.io

[lints]
workspace = true

[dependencies]
codlet-core = { workspace = true, features = ["test-utils"] }
tokio = { workspace = true, features = ["rt", "macros", "sync", "time"] }
futures = "0.3"
