[package]
name = "codlet-examples"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Compilable usage examples for codlet (RFC-016)."
publish = false

[lints]
workspace = true

[dependencies]
codlet-core = { workspace = true, features = ["test-utils"] }
codlet-sqlx = { workspace = true }
sqlx   = { workspace = true, features = ["sqlite", "runtime-tokio"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
