[package]
name = "codlet-sqlx"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "SQLite (and future PostgreSQL) storage adapters for codlet, backed by SQLx (RFC-011)."
readme = "README.md"

[lints]
workspace = true

[features]
default      = ["sqlite"]
sqlite       = ["sqlx/sqlite"]
postgres     = ["sqlx/postgres"]
# Enable for postgres integration tests (requires Docker).
# CI adds this flag in the test-postgres job.
postgres-test = ["postgres", "dep:testcontainers-modules"]

[dependencies]
codlet-core = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio"] }
tokio = { workspace = true, features = ["rt"] }

[dev-dependencies]
codlet-conformance = { path = "../codlet-conformance" }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync"] }
tempfile = "3"

[dependencies.testcontainers-modules]
version = "0.11"
features = ["postgres"]
optional = true
