[package]
name = "codlet-sqlx"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "SQLite and PostgreSQL storage adapters for codlet, backed by SQLx (RFC-011, RFC-034)."
readme = "README.md"

[lints]
workspace = true

[features]
# No default: callers choose their backend explicitly.
# Use `--features sqlite` for SQLite or `--features postgres` for PostgreSQL.
# Both can be enabled simultaneously.
default      = ["sqlite"]
sqlite       = ["sqlx/sqlite"]
postgres     = ["sqlx/postgres"]
# Activates postgres + testcontainers for Docker-based integration tests.
postgres-test = ["postgres", "dep:testcontainers-modules"]

[dependencies]
codlet-core = { workspace = true }
# runtime-tokio is unconditional: both SQLite and PostgreSQL adapters require
# an async runtime and tokio is the only supported choice. Hosts using
# async-std must wrap calls via a tokio runtime block.
sqlx = { workspace = true, features = ["runtime-tokio"] }
tokio = { workspace = true, features = ["rt"] }

[dev-dependencies]
codlet-conformance = { path = "../codlet-conformance" }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync"] }
tempfile = "3"

[dependencies.testcontainers-modules]
version = "0.11"
features = ["postgres"]
optional = true
