[package]
name        = "codlet-worker"
description = "Cloudflare Workers adapter for codlet: D1-backed stores and KV rate limiting (RFC-033)."
readme      = "README.md"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
# Not published until v1.0 API stabilises.
publish = false

[lints]
workspace = true

[lib]
# cdylib for Workers; rlib so that native tooling (cargo check, docs) also works.
crate-type = ["cdylib", "rlib"]

# Worker SDK is only meaningful on wasm32.  On native targets the
# dependency is absent so `cargo check --workspace` and doc builds pass.
[target.'cfg(target_arch = "wasm32")'.dependencies]
codlet      = { workspace = true }
worker      = { workspace = true, features = ["d1"] }
worker-kv   = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
