[package]
name = "codlet"
description = "Core authentication primitives for codlet: code policy, generation, normalization, keyed lookup derivation, lifecycle state machines, and storage traits."
readme = "README.md"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
categories.workspace   = true
keywords.workspace     = true

[lints]
workspace = true

[features]
default = ["std"]
std = []
# Serializable representation of public record types. Pure representation
# (RFC-002 §10.3 "Pure representation" class): must never serialize a secret.
serde = ["dep:serde"]
# Deterministic fake clock/RNG and in-memory stores for tests and examples.
# NOT enabled by default and visibly non-production (RFC-002 §10.3 "Test-only").
test-utils = []

[dependencies]
hmac = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
# On wasm32-unknown-unknown (Cloudflare Workers), getrandom must use the
# `js` feature to route through wasm-bindgen's crypto.getRandomValues().
# On native targets the default OS-based RNG is used; `js` must not be
# enabled there.
getrandom = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { workspace = true, features = ["wasm_js"] }

[dev-dependencies]
serde_json        = { workspace = true }
static_assertions = { workspace = true }
tokio             = { workspace = true, features = ["rt", "macros"] }
