[package]
name        = "axum_login_logout"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Minimal Axum login/logout web app using codlet (example)."
publish     = false

[lints]
workspace = true

[dependencies]
codlet-core = { workspace = true }
codlet-sqlx = { workspace = true }
sqlx        = { workspace = true, features = ["sqlite", "runtime-tokio"] }
tokio       = { workspace = true, features = ["rt-multi-thread", "macros"] }
axum        = { version = "0.8", features = ["form"] }
serde       = { workspace = true }
