[package]
name        = "form_token_csrf"
description = "Single-use CSRF form token example using codlet (example)."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
publish = false

[lints]
workspace = true

[dependencies]
codlet      = { workspace = true, features = ["test-utils"] }
tokio       = { workspace = true, features = ["rt-multi-thread", "macros"] }
