[package]
name        = "key_rotation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "HMAC key rotation grace period example using codlet (example)."
publish     = false

[lints]
workspace = true

[dependencies]
codlet-core = { workspace = true }
tokio       = { workspace = true, features = ["rt-multi-thread", "macros"] }
